Added realistic rates (vs conservative)

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -415,7 +415,11 @@
     "sources for determining the rates.\n",
     "Valid choices are *historical*, *stochastic*, *average*, *fixed*, *conservative*, or *default*.\n",
     "\n",
-    "For the *conservative* case, values reported from MorningStar for the next ten years are used. These are rates lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 5.0% for the S&P 500 and the Corporate bonds markets, 4% for the 10-year Treasury bonds, with an inflation at around 2.5%. Using these conservative rates can be achieved by using the following call:\n",
+    "For the *realistic* case, values reported from MorningStar for the next ten years are used. It is selected by using this call:\n",
+    "\n",
+    "    plan.setRates('realistic')\n",
+    "\n",
+    "*Conservative* rates are lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 6.0% for the S&P 500, 4.0% for the Corporate bonds markets, 3.5% for the 10-year Treasury bonds, with an inflation at around 2.8%. Using these conservative rates can be achieved by using the following call:\n",
     "\n",
     "    plan.setRates('conservative')\n",
     "\n",
