--- a/roth.ipynb
+++ b/roth.ipynb
@@ -277,7 +277,7 @@
     "\n",
     "In particular, is there a preferable sequence of conversions when markets are fluctuating? To answer this question, we will use two cases. One with fixed rate of returns, and another with the sequence of historical rates that happened from 1969 and the years after. Are there signs in the market that can indicate preferable times to make a Roth conversion?\n",
     "\n",
-    "We start by making clones of the plan we have designed so far, and select different kind of rates. One has fixed, conservative rates, while the other has historical and realistic annual rates of returns. We will give each new plan a new name to distinguish their output."
+    "We start by making clones of the plan we have designed so far, and select different kind of rates. One has fixed, realistic rates, while the other has historical and realistic annual rates of returns. We will give each new plan a new name to distinguish their output."
    ]
   },
   {
@@ -288,8 +288,8 @@
    "outputs": [],
    "source": [
     "plan_fixed = arp.clone(plan)\n",
-    "plan_fixed.setRates('conservative')\n",
-    "plan_fixed.setName('fixed conservative')\n",
+    "plan_fixed.setRates('realistic')\n",
+    "plan_fixed.setName('fixed realistic')\n",
     "\n",
     "plan_hist = arp.clone(plan)           \n",
     "plan_hist.setRates('historical', 1969)\n",
@@ -328,7 +328,7 @@
    "id": "6207f4af-9aae-4e42-a5ea-beb27388379a",
    "metadata": {},
    "source": [
-    "Given the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$5.1M, while it is only \\\\$3.2M when we consider fixed conservative rates. This is to be expected.\n",
+    "With the historical sequence of rates, including inflation, the final wealth in today's \\\\$ is about \\\\$5.1M, while it is \\\\$5.9M when we consider fixed realistic rates. This is to be expected as one compares the cumulative inflation between the two cases.\n",
     "\n",
     "Now we try to find a better scenario that would include the (near) best sequence of Roth conversions for each of these cases. For this purpose, we use the `optimizeRoth()` function. The first and second arguments specify the plan to optimize and the tax rate on the tax-deferred portion of the estate. The minimization algorithm must also be given a Roth conversion amount to start considering down to the smallest adjustment to make. These values are specified using the `startConv` and `minConv` values. Note that the computer time required to make the calculations will increase as you decrease the value of `minConv`.\n",
     "\n",
@@ -352,7 +352,7 @@
    "id": "8b7c406d-26bc-425f-9921-6113b97df81e",
    "metadata": {},
    "source": [
-    "For fixed rates, we see that Roth conversion can still increase the value of the estate by \\\\$186 k. This is mostly due to tax avoidance of the large RMDs that would result otherwise. "
+    "For fixed rates, we see that Roth conversion can still increase the value of the estate by \\\\$537 k. This is mostly due to tax avoidance of the large RMDs that would result otherwise. "
    ]
   },
   {
