--- a/template.ipynb
+++ b/template.ipynb
@@ -399,9 +399,13 @@
     "These are important components of future assumptions.\n",
     "Setting future rates is done with the `setRates()` method from which one can select different\n",
     "sources for determining the rates.\n",
-    "Valid entries are *historical*, *stochastic*, *average*, *conservative*, *default*, or *fixed*.\n",
+    "Valid entries are *realistic*, *historical*, *stochastic*, *average*, *conservative*, *default*, or *fixed*.\n",
     "\n",
-    "For the *conservative* case, values reported from MorningStar for the next ten years are used. These are rates lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 5.0% for the S&P 500 and the Corporate bonds markets, 4% for the 10-year Treasury bonds, with an inflation at around 2.5%. Using these conservative rates can be achieved by using the following call:\n",
+    "For the *realistic* case, values reported from MorningStar for the next ten years are used. This is done by using:\n",
+    "\n",
+    "    plan.setRates('conservative')\n",
+    "\n",
+    "*Conservative* rates are lower than the last ten years as most analysts are predicting lower rates from the next decade. These values are fixed rates of 6.0% for the S&P 500, 4.0% the Corporate bonds markets, 3.5% for the 10-year Treasury bonds, with an inflation at around 2.8%. Using these conservative rates can be achieved by using the following call:\n",
     "\n",
     "    plan.setRates('conservative')\n",
     "\n",
