Modified bengen case to be all tax-free. Dah!

--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -494,7 +494,7 @@
    "source": [
     "Since ARP Lab has the historical rates available, one can also display their histograms using a simple function call. This is done with `arp.showRateDistribution()`.\n",
     "\n",
-    "Given the standard deviation of each histogram, the risk/benefit between stocks and bonds is clear. As this function returns the means and covariance matrix, we assign the result to the `_` variable which, in Python, is used to store results from the last command."
+    "Given the standard deviation of each histogram, the risk/benefit between stocks and bonds is clear. As this function returns the means and covariance matrix, we assign the result to the `_` variable which, in Python, is used to store results from the last command. Let's look at the rates distribution over the 30-year period running from 1969 to 1999. Notice how high is the average inflation."
    ]
   },
   {
@@ -504,7 +504,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_ = arp.showRateDistributions(1928, 2023)"
+    "_ = arp.showRateDistributions(1969, 1999)"
    ]
   },
   {
