--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -49,9 +49,9 @@
    "source": [
     "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the one which happened in 1966. The market in 1966 is peculiar in the sense that the following 17 years will be with a near-zero rate of return when one is considering inflation. This particular and exceptional sequence of returns makes it a worst-case scenario for testing the robustness of one's retirement plan. However, it is testing one's scenario with the most challenging set of historical rates, resulting in one planning for the worst case scenario. We would never leave our home if we were to live that way!\n",
     "\n",
-    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data. Note that the income tax was not considered in the original paper. Neither was social security.\n",
+    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data. Note that the income tax was not considered in the original paper. Neither was social security. Therefore, we will assume that all the assets are in a tax-free Roth account.\n",
     "\n",
-    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These initial withdrawals are then adjusted for inflation and no income tax is considered. To avoid triggering the income tax machinery in ARP Lab, we will use an unrealistically small amount of \\\\$2k per year to be withdrawn from a single \\\\$50k tax-deferred account. As this scenario is meant to explore the effects of a percentage, multiplying all the numbers by 20 will convert the results of withdrawing \\\\$40k from a \\\\$1M portfolio. This can obviously be done for any other portfolio balance of interest. Also, we will assume that the money is in a Roth account to avoid triggering the machinery of required minimum distributions.\n",
+    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These initial withdrawals are then adjusted for inflation and no income tax is considered. As this scenario is meant to explore the effects of a percentage, we will use a round balance of \\\\$1 M in a tax-free account. Other portfolio balances of interest can be obtained with a simple multiplication. As we mentioned, we assume that the money is in a Roth account to avoid triggering the machinery of required minimum distributions.\n",
     "\n",
     "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepancies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
    ]
@@ -155,7 +155,7 @@
    "source": [
     "plan.setAssetBalances(taxable=[0], \n",
     "                      taxDeferred=[0],\n",
-    "                      taxFree=[50000],\n",
+    "                      taxFree=[1000000],\n",
     "                      beneficiary=[1])"
    ]
   },
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(2000, 'flat')"
+    "plan.setDesiredIncome(40000, 'flat')"
    ]
   },
   {
