--- a/roth.ipynb
+++ b/roth.ipynb
@@ -53,14 +53,18 @@
     "The common conclusion drawn from this argument is that unless the tax rate today is smaller than the tax rate in the future, i.e., unless $t_0 < t_n$, which would imply that $B'_n > B_n$, then there is no benefit in performing a Roth conversion. It is often argued that the income at retirement will be lower than during active life, and therefore the tax rate will be lower in retirement, provided the tax code stays as it is. However, speculations about future tax rates, some of which having some merit, are then brought up. For example, it is observed that the historical income tax rates in the US are not sustainable given the mandatory spending of the US government, especially regarding an aging population. To support this point, historical data on income tax rates are shown to support the hypothesis that tax rates are likely to increase in the future. The following figure shows how marginal tax rates have decreased during the last 50 years, as a supporting evidence that an increase of income tax rates are likely in the future.\n",
     "![US historical income tax rate](images/USIncomeTaxMarginalRates.png)\n",
     "\n",
+    "For married couples, tax rates can also increase due to the passing of one spouse who would then become the holder of both tax-deferred accounts while having to pay income tax as a single individual. This is certainly a valid concern in many cases.\n",
+    "\n",
     "So what is wrong with this argument? Nothing. The argument is valid, but the assumptions are not. Here are the hidden assumptions:\n",
     "- The rate of return $r$ is constant in time. **It is obviously not.**\n",
-    "- The income at retirement is likely to be less than during one's active life, and therefore income taxes during retirement will be lower. **This is not the case if the required minimum distributions (RMDs) are large.** This is particularly true for individuals having large balances in their tax-deferred accounts.\n",
+    "- The income at retirement is likely to be less than during one's active life, and therefore income taxes during retirement will be lower. **This is not the case if the required minimum distributions (RMDs) are large.** This is particularly true for individuals having large balances in their tax-deferred accounts, or for a surviving spouse as we just discussed.\n",
     "- The rate of return in a tax-deferred account is the same as the one in a tax-free account. **Not necessarily, in fact they shouldn't be.** For tax and risk management, the distribution of assets in these accounts should definitely not be the same as both withdrawals and investments from and in these accounts should be coordinated. An easy strategy is to keep the high-risk/high-reward assets in the tax-free account, which is likely to be depleted last, and put the less volatile assets in the tax-deferred account. This means that $r$ for the tax-deferred account will definitely not be the same as the one for the tax-free account.\n",
     "\n",
     "ARP Lab is not free of assumptions. Future tax rates are known until 2025. For after 2025, the platform assumes that the tax code of 2017 becomes active after the expiration of the TCJA (expiring in 2025). Income brackets are indexed for inflation, which rate is speculated through the rates selected (e.g., historical, fixed, or statistical) by the user.\n",
     "\n",
-    "Let's investigate this in more detail by using a few specific examples. We will be using historical data and a heuristic Roth optimizer. Note that this optimizer is not trying to get the maximum income during retirement. Instead, it tries to maximize the estate under the constraint that the desired net income will be matched.We will be using a hypothetical case of Clyde and Bonnie who have sufficient assets, and believe that they can live comfortably while leaving some money to their heirs. The goal is therefore to maximize the estate, under the assumption that a certain income tax rate will apply when heirs withdraw the money from the tax-deferred account. This rate is not an estate tax, it is an income tax rate on the tax-deferred portion of the estate."
+    "Let's investigate Roth conversions in more detail by using a few specific examples. We will be using historical data and a heuristic Roth optimizer. Note that this optimizer is not trying to get the maximum income during retirement. Instead, it tries to maximize the estate under the constraint that the desired net income will be matched. Unlike some Roth optimizers that are designed to *surf* a chosen predicted tax bracket, ARP Lab optimizes by using an annealing approach finding the best sequence of conversions that can lead to the highest estate in today's \\\\$, while accounting for the heirs tax rate on the tax-deferred portion of the estate. This capability allows us to explore cases where the rate of return is not constant, as it is in real life.\n",
+    "\n",
+    "We will be using a hypothetical case of Clyde and Bonnie who have sufficient assets, and believe that they can live comfortably while leaving some money to their heirs. The goal is therefore to maximize the estate, under the assumption that a certain income tax rate will apply when heirs withdraw the money from the tax-deferred account. Again. this rate is not an estate tax, but an income tax rate to be paid on the tax-deferred portion of the estate."
    ]
   },
   {
@@ -265,7 +269,7 @@
    "id": "6fd38f91-b15e-4750-bf29-a8b29d499ff6",
    "metadata": {},
    "source": [
-    "## Set rates and run case"
+    "## Set rates and run cases"
    ]
   },
   {
@@ -287,13 +291,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_fixed = arp.clone(plan)\n",
+    "plan_fixed = arp.clone(plan, 'fixed realistic')\n",
     "plan_fixed.setRates('realistic')\n",
-    "plan_fixed.setName('fixed realistic')\n",
     "\n",
-    "plan_hist = arp.clone(plan)           \n",
-    "plan_hist.setRates('historical', 1969)\n",
-    "plan_hist.setName('historical 1969')"
+    "plan_hist = arp.clone(plan, 'historical 1969')      \n",
+    "plan_hist.setRates('historical', 1969)"
    ]
   },
   {
