--- a/roth.ipynb
+++ b/roth.ipynb
@@ -122,7 +122,7 @@
    "metadata": {},
    "source": [
     "## Assets balances in each type of savings accounts\n",
-    "Bonnie has \\\\$100 k in her taxable savings account, \\\\$2 M in her 401k, and \\\\$120 k in a Roth 401k account. Clyde has \\\\$50 k in is taxable savings account, \\\\$400 k in a 403b, and \\\\$25 k in a Roth IRA. They leave everything to each others, indicated by the full fraction 1.  as beneficiaries. This information is entered using the `setAssetsBalances()` function call as follows."
+    "Bonnie has \\\\$100 k in her taxable savings account, \\\\$2 M in her 401k, and \\\\$120 k in a Roth 401k account. Clyde has \\\\$50 k in his taxable savings account, \\\\$400 k in a 403b, and \\\\$25 k in a Roth IRA. They leave everything to each others, indicated by the full fraction 1.  as beneficiaries. This information is entered using the `setAssetsBalances()` function call as follows."
    ]
   },
   {
@@ -512,10 +512,12 @@
     "- What is the effect of a *smile* spending profile vs a *flat* spending profile?\n",
     "- What if both spouses have large tax-deferred assets?\n",
     "- What are the benefits of accounts allocations in this case? What if accounts allocations are not coordinated?\n",
-    "- What happens if a different historical starting year other than 1969 is selected? Are the effects as significant?\n",
+    "- What happens if a different historical starting year other than 1969, say 1996, is selected? Are the effects as significant?\n",
     "- ...\n",
     "\n",
-    "ARP Lab is designed to tackle these questions. They can be answered by changing only a few parameters in this file. Or in your own case file. For running a new case, edit the parameters and click on the double play arrows at the top bar of the notebook (*Restart Kernel and Run All Cells*).\n",
+    "ARP Lab is designed to tackle these questions. They can be answered by changing only a few parameters in this file, or by creating your own case file. You will find that some of the results obtained can be quite surprising and involve conversions that would first seem counter-intuitive. \n",
+    "\n",
+    "For running a new case, edit the parameters and click on the double play arrows at the top bar of the notebook (*Restart Kernel and Run All Cells*).\n",
     "\n",
     "Go explore!\n",
     "  "
