--- a/bengen_4%.ipynb
+++ b/bengen_4%.ipynb
@@ -47,11 +47,11 @@
    "id": "c2939c06-b407-48fb-91d7-560cd96d5206",
    "metadata": {},
    "source": [
-    "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-deferred account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the one which happened in 1966. The market in 1966 is peculiar in the sense that the following 17 years will be with a near-zero rate of return when one is considering inflation. This particular and exceptional sequence of returns makes it a worst-case scenario for testing the robustness of one's retirement plan. However, it is testing one's scenario with the most challenging set of historical rates, resulting in one planning for the worst case scenario. We would never leave our home if we were to live that way!\n",
+    "This notebook describes the case of Sam, a fictitious individual used for demonstrating the conditions required for the so-called 4% rule. This case considers no pension, no social security benefits, just a portfolio of a tax-free account with 50% stocks and 50% bounds. This scenario is then tested to survive sequences of historical rates, particularly the one which happened in 1966. The market in 1966 is peculiar in the sense that the following 17 years will be with a near-zero rate of return when one is considering inflation. This particular and exceptional sequence of returns makes it a worst-case scenario for testing the robustness of one's retirement plan. However, it is testing one's scenario with the most challenging set of historical rates, resulting in one planning for the worst case scenario. We would never leave our home if we were to live that way!\n",
     "\n",
-    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-deferred account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data. Note that the income tax was not considered in the original paper. Neither was social security. Therefore, we will assume that all the assets are in a tax-free Roth account.\n",
+    "The article that popularized the 4% rule is from William Bengen (Journal of Financial Planning, October 1994). The scenarios used consist of looking at the longevity of a 50% common stocks and 50% intermediate-term Treasury notes portfolio under a variety of withdrawal rates and depending on the historical year that the individual started her retirement. Cases considered consisted of withdrawal rates from 1% to 6%, to be determined on the balance of a single tax-free account at the first year of retirement and then be indexed for inflation. These scenarios highlight the effect of sequence of returns through using historical data. Note that the income tax was not considered in the original paper. Neither was social security. Therefore, this is why we will assume that all the assets are in a tax-free Roth account.\n",
     "\n",
-    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These initial withdrawals are then adjusted for inflation and no income tax is considered. As this scenario is meant to explore the effects of a percentage, we will use a round balance of \\\\$1 M in a tax-free account. Other portfolio balances of interest can be obtained with a simple multiplication. As we mentioned, we assume that the money is in a Roth account to avoid triggering the machinery of required minimum distributions.\n",
+    "The original claim is that a withdrawal rate of 4% of the portfolio at the first year of retirement would be sustainable for a 30-year retirement period. These initial withdrawals are then adjusted for inflation and no income tax is considered. As this scenario is meant to explore the effects of a percentage, we will use a round balance of \\\\$1 M in a tax-free account. Other portfolio balances of interest can be obtained with a simple multiplication. As we mentioned, we assume that the money is in a Roth account to avoid triggering the machinery of income tax as well as required minimum distributions.\n",
     "\n",
     "Note that Bengen used data from Ibbotson's SBBI (Stocks, Bonds, Bills, Inflation) Yearbook while the data used in ARP Lab is from the NYU Stern business school. There will be slight discrepancies in the number of years that the accounts can sustain due to the slight difference in the rates used. As a results, the investment portfolios in ARP Lab last a little shorter than those originally obtained by Bengen. The trends and conclusions are the same however."
    ]
@@ -85,7 +85,7 @@
    "id": "d2d87b7e",
    "metadata": {},
    "source": [
-    "## Initializing the realization\n",
+    "## Initializing the life parameters of the realization\n",
     "In order to be able to generate a realization of the future, one must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
     "For selecting your own numbers, there are plenty of longevity predictors on the web. Pick your favorite:\n",
@@ -127,7 +127,7 @@
    "id": "47f309e7-0654-4f75-87b5-921167db4a6a",
    "metadata": {},
    "source": [
-    "## Specify account balances and spousal beneficiaries\n",
+    "## Specify savings account balances and spousal beneficiaries\n",
     "For each spouse, savings accounts have three buckets comprising of the total value of:\n",
     "- Individual **taxable** investment or savings accounts, including bank accounts, and CDs - do not include your safety net account which should typically be sufficient for sustaining 6 months of living expenses;\n",
     "- **Tax-deferred** savings accounts, including all IRAs, 401k, 403b, etc.;\n",
@@ -143,7 +143,7 @@
    "id": "6ea4c5dc-f88d-47c5-a1ec-3474d023bf23",
    "metadata": {},
    "source": [
-    "Sam has \\\\$50k in a single tax-free account for a %4 withdrawal. This amount is ridiculously small to avoid triggering income tax. We also use a Roth account to avoid RMDs. Just multiply all numbers by 20 in your head to get to a \\\\$1M account. "
+    "Sam has \\\\$1 M in a single tax-free account for a %4 withdrawal. We use a Roth account to avoid RMDs. Just multiply all numbers by $x$ in your head to get to a multiple of this \\\\$1 M account. "
    ]
   },
   {
@@ -156,7 +156,8 @@
     "plan.setAssetBalances(taxable=[0], \n",
     "                      taxDeferred=[0],\n",
     "                      taxFree=[1000000],\n",
-    "                      beneficiary=[1])"
+    "                      beneficiary=[1])\n",
+    "plan.setName('Bengen 4% rule')"
    ]
   },
   {
@@ -164,7 +165,7 @@
    "id": "429aafe1-3661-4708-b56c-c256c025c9ab",
    "metadata": {},
    "source": [
-    "## There must be a plan for savings\n",
+    "## There must be a plan for wages and savings\n",
     "The most manageable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
     "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
     "\n",
@@ -195,7 +196,7 @@
    "id": "d23a5ef3-3253-4415-812e-c4e181ec9dd0",
    "metadata": {},
    "source": [
-    "Sam has no additional income and does not make any additional contributions. We will use the template file which is empty but has the first tab named *Sam*."
+    "Sam has no additional wages and does not make any additional contributions. We will use the template file which is empty but has the first tab named *Sam*."
    ]
   },
   {
@@ -232,7 +233,7 @@
    "id": "eecc3b25-ae80-4e6a-be38-1f3c66a46899",
    "metadata": {},
    "source": [
-    "For our particular 4% rule case, Sam's assets allocations use a 50/50 portfolio per Bengen's study. Note that assets allocation ratios are entered as percentages, and that these percentages are for each type of savings account."
+    "For our particular 4% rule case, Sam's assets allocations use a 50/50 portfolio per Bengen's study. Note that assets allocation ratios are entered as percentages, and that these percentages are for each type of savings account. The allocations must be interpolated between the initial and final allocation. We use a *linear* rule which will keep them constant in this case."
    ]
   },
   {
@@ -305,7 +306,7 @@
    "id": "97c0ccc9-4e9b-4a9f-a625-d330ca3b04bb",
    "metadata": {},
    "source": [
-    "Sam is applying the 4% rule. As the assets are \\\\$50k, $2000 is the first withdrawal. To get results for higher savings balances, say \\\\$1M, just multiply all numbers by 20."
+    "Sam is applying the 4% rule. As the assets are \\\\$1 M, $40 k is the first withdrawal. To get results for higher savings balances, say \\\\$2.5 M, just multiply all numbers by 2.5."
    ]
   },
   {
@@ -717,7 +718,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.setDesiredIncome(2000, 'flat')\n",
+    "plan.setDesiredIncome(40000, 'flat')\n",
     "arp.setVerbose(False)\n",
     "plan.runHistorical(1960, 1988, myplots=['rates', 'net income'], tag='Sam')"
    ]
