--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -90,7 +90,7 @@
    "id": "d2d87b7e",
    "metadata": {},
    "source": [
-    "## Initializing the realization\n",
+    "## Initializing the life parameters for the realization\n",
     "In order to be able to generate a realization of the future, one must start with providing the year of birth of each spouse(s) and their expected lifespan(s).\n",
     "\n",
     "For selecting your own numbers, there are plenty of longevity predictors on the web. Pick your favorite:\n",
@@ -169,7 +169,7 @@
    "id": "de5a5c3f-bfad-4d95-a8ae-1d4f3d37661d",
    "metadata": {},
    "source": [
-    "## There must be a plan for savings\n",
+    "## There must be a plan for wages, savings, and Roth conversions\n",
     "The most manageable part of retirement planning is the control one has over work income, contributions to savings accounts, Roth conversions, and other big spending items in the near- and mid-term future.\n",
     "In order to execute a realization, one must provide an earning, saving, and Roth conversion plan. This is done through providing an Excel workbook with one spreadsheet (tab) per spouse with the following information:\n",
     "\n",
