--- a/mary+john.ipynb
+++ b/mary+john.ipynb
@@ -91,7 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan1 = arp.Plan(YOB=[1962, 1965], expectancy=[85, 88])"
+    "plan1 = arp.Plan(YOB=[1962, 1965], expectancy=[85, 88])\n",
+    "plan1.setName('Mary & John')"
    ]
   },
   {
@@ -355,7 +356,7 @@
    "metadata": {},
    "source": [
     "## Generating the outcome of these scenarios\n",
-    "We're now ready to run the single instance of each scenario!\n"
+    "We're now ready to run the single instance of each scenario! We use a list construct to process all three plans in a `for` loop.\n"
    ]
   },
   {
@@ -385,7 +386,7 @@
    "metadata": {},
    "source": [
     "### Compare some of the relevant info over the years\n",
-    "We use a list to plot values from each plan."
+    "We use the same list to display the graph associated with each plan."
    ]
   },
   {
@@ -395,7 +396,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "for plan in plans:\n",
     "    plan.showNetIncome();\n",
     "\n",
