--- a/jack+jill.ipynb
+++ b/jack+jill.ipynb
@@ -37,7 +37,7 @@
    "id": "a289fed6-6b3b-4fd6-9943-f620e1334cf9",
    "metadata": {},
    "source": [
-    "# The case of Jack and Jill"
+    "# Tutorial - Using the case of Jack and Jill"
    ]
   },
   {
@@ -113,7 +113,7 @@
    "id": "6b58d346-55a3-40f0-91fe-014a150f5b76",
    "metadata": {},
    "source": [
-    "Here Jack was born in 1962 and Jill in 1965. Jack hopes to live to 89 years old, while Jill thinks she might reach age 92."
+    "Here Jack was born in 1962 and Jill in 1965. Jack hopes to live to 89 years old, while Jill thinks she might reach age 92. Let's give this case a name."
    ]
   },
   {
@@ -124,7 +124,7 @@
    "outputs": [],
    "source": [
     "plan = arp.Plan(YOB=[1962, 1965], expectancy=[89, 92])\n",
-    "plan.setName('jack & jill')"
+    "plan.setName('jack & jill - tutorial')"
    ]
   },
   {
@@ -558,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showNetIncome();"
+    "plan.showNetIncome()"
    ]
   },
   {
@@ -577,7 +577,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showSources();"
+    "plan.showSources()"
    ]
   },
   {
@@ -596,7 +596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showAccounts();"
+    "plan.showAccounts()"
    ]
   },
   {
@@ -657,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showTaxes();"
+    "plan.showTaxes()"
    ]
   },
   {
@@ -678,7 +678,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showGrossIncome();"
+    "plan.showGrossIncome()"
    ]
   },
   {
@@ -697,7 +697,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan.showRates();"
+    "plan.showRates()"
    ]
   },
   {
@@ -826,6 +826,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plan.setRates('realistic')\n",
     "plan2, conversions = arp.optimizeRoth(plan, 30)\n",
     "print(conversions)\n",
     "plan2.run();\n",
