Black formatting and rate correction for 1st year.

--- a/template.ipynb
+++ b/template.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "### <span style=\"color: blue\"> README FIRST </span>\n",
     "<span style=\"color:black;background:yellow;font-weight:bold\">\n",
-    "    Don't make changes directly to this file. Keep it as a working example. Therefore, it is strongly recommended that you build your own case using the template files provided where you will be able to enter your own numbers and explore your own assumptions. \n",
+    "    Don't make changes directly to this file. Keep it as a working example. Therefore, it is strongly recommended that you build your own case by making a copy of the template files provided where you will be able to enter your own numbers and explore your own assumptions. \n",
     "</span>"
    ]
   },
@@ -171,7 +171,7 @@
     "| ... | | | | | | | | |\n",
     "|20XX | | | | | | | | |\n",
     "\n",
-    "Here, 20XX is the last row that is the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated wages* is the annual amount (gross wages minus tax-deferred contributions) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment accounts). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
+    "Here, 20XX is the last row which should be the first year after the last spouse has passed based on the life expectancy values provided. For the columns, *anticipated wages* is the annual amount (gross wages minus tax-deferred contributions) that you anticipate to receive from employement or other sources (not including dividends from your taxable investment accounts). Note that column names are case sensitive and all of these entries must be in lower case. Best way to start this process is to use the template provided rightly named *template.xlsx*.\n",
     "\n",
     "For the purpose of this exercise, there is no clear definition of retirement age. There will be a year, however, from which you will stop having anticipated income, or diminished income due to decreasing your work load. This transition can be gradual or sudden. Therefore there is no need to enter a retirement age for the sole purpose of quantifying your financial future.\n",
     "\n",
